# massive-stream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
data/: foo.txt
prometheus/: docker-compose.yml
src/: main.rs  utils.txt
src/repository/: client.rs
utils/server/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json
utils/server/data/: big.txt  fake.js  small.json  small.txt
