[package]
name = "perf"
version = "0.1.0"
authors = ["granbestiapop <leonardo.clavijo@mercadolibre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3.5" }
reqwest = { version = "0.10.8", features = ["stream"] }
tokio-util = { version = "0.3.1", features = ["compat"]}
